@@ -22,6 +22,7 @@
         <spring-cloud-aws.version>3.3.0</spring-cloud-aws.version>
         <springdoc.version>2.8.6</springdoc.version>
         <lombok.version>1.18.38</lombok.version>
+        <gatling.version>3.13.1</gatling.version>
     </properties>
 
     <dependencyManagement>
@@ -65,6 +66,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.gatling.highcharts</groupId>
+            <artifactId>gatling-charts-highcharts</artifactId>
+            <version>${gatling.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -92,6 +99,24 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>io.gatling</groupId>
+                <artifactId>gatling-maven-plugin</artifactId>
+                <version>4.10.2</version>
+                <configuration>
+                    <simulationClass>com.testingai.sqs.performance.DemoSimulation</simulationClass>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>**/performance/**</exclude>
+                    </excludes>
+                    <argLine>-Dnet.bytebuddy.experimental=true</argLine>
                 </configuration>
             </plugin>
         </plugins>
